# connect-spa-sample

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: connect_client.py  main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: base.css
frontend/src/components/: ExtensionIframe.vue
tests/: test_connect_client.py
